fixed typo on documentation and classes